<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xpeppers.trentinolocal.details.OfferDetailActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/svMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/code"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tvCoupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Coupon"
                    android:textSize="@dimen/text_code_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/used_by"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tvUserFullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nome"
                    android:textSize="@dimen/text_code_size"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.70"
                    android:orientation="vertical" >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Data"
                        android:textSize="@dimen/text_code_size"
                        />
                    </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Prezzo"
                    android:textSize="@dimen/text_code_size"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/where_use"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/map_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <fragment
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-100dp"
                    android:layout_marginBottom="-100dp"
                    android:name="com.google.android.gms.maps.MapFragment"/>

                <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@android:color/transparent" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_padding"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tvMerchant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/merchant"
                        android:textSize="@dimen/text_size"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:paddingBottom="@dimen/text_padding"
                        android:gravity="center">

                        <com.rey.material.widget.ImageButton
                            android:id="@+id/ibAddress"
                            style="@style/RaiseWaveColorGreenButtonRippleStyle"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            app:rd_delayClick="afterRelease" />

                        <TextView
                            android:id="@+id/tvAddress"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/address"
                            android:textSize="@dimen/text_size"
                            android:paddingLeft="@dimen/text_padding"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:paddingBottom="@dimen/text_padding"
                        android:gravity="center">

                        <com.rey.material.widget.ImageButton
                            android:id="@+id/ibTel"
                            style="@style/RaiseWaveColorGreenButtonRippleStyle"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            app:rd_delayClick="afterRelease" />

                        <TextView
                            android:id="@+id/tvTel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tel"
                            android:textSize="@dimen/text_size"
                            android:paddingLeft="@dimen/text_padding"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:paddingBottom="@dimen/text_padding"
                        android:gravity="center">

                        <com.rey.material.widget.ImageButton
                            android:id="@+id/ibEmail"
                            style="@style/RaiseWaveColorGreenButtonRippleStyle"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            app:rd_delayClick="afterRelease" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/email"
                            android:textSize="@dimen/text_size"
                            android:paddingLeft="@dimen/text_padding"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/text_padding"
                        android:paddingStart="@dimen/text_padding"
                        android:paddingBottom="@dimen/text_padding"
                        android:gravity="center">

                        <com.rey.material.widget.ImageButton
                            android:id="@+id/ibSiteWeb"
                            style="@style/RaiseWaveColorGreenButtonRippleStyle"
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            app:rd_delayClick="afterRelease" />

                        <TextView
                            android:id="@+id/tvSiteWeb"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/siteweb"
                            android:textSize="@dimen/text_size"
                            android:paddingLeft="@dimen/text_padding"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/llCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/phone"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/text_padding"
                        android:text="@string/call"
                        android:textSize="@dimen/text_size"
                        android:textColor="@color/trentino_green2"
                        android:textAllCaps="true"/>
                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_does_it_work"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvHowDoesItWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_does_it_work_content_2"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support_description"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_height">

                <HorizontalScrollView
                    android:id="@+id/hsViewMultiImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_image_height"
                    android:visibility="visible" >

                    <LinearLayout
                        android:id="@+id/llGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >
                    </LinearLayout>

                </HorizontalScrollView>

                <ImageView
                    android:id="@+id/ivOfferSingleImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_image_height"
                    android:src="@drawable/placeholder"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description"
                android:textSize="@dimen/text_size"
                android:padding="@dimen/text_padding" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
