<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xpeppers.trentinolocal.details.OfferDetailActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/internal_padding"
        android:paddingRight="@dimen/internal_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/visto"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/thanks"
            android:textStyle="bold"
            android:textSize="@dimen/text_price_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_email"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="CODE1234567"
            android:textStyle="bold"
            android:textSize="@dimen/text_code_size"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_weight="0"
        android:orientation="horizontal">

        <com.rey.material.widget.Button
            android:id="@+id/bContinue"
            style="@style/RaiseWaveColorGreenButtonRippleStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/continue_shopping"
            android:textColor="@color/trentino_white"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            app:rd_delayClick="afterRelease" />
    </LinearLayout>
</LinearLayout>
